--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_map">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.mygeolocation.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_map"
+        android:name="com.example.mygeolocation.ui.home.MapFragment"
+        android:label="@string/title_map"
+        tools:layout="@layout/fragment_map" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.mygeolocation.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_list_marker"
+        android:name="com.example.mygeolocation.ui.dashboard.ListMarkerFragment"
+        android:label="@string/title_list_marker"
+        tools:layout="@layout/fragment_list_marker" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.mygeolocation.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_not_use"
+        android:name="com.example.mygeolocation.ui.notifications.NotUseFragment"
+        android:label="@string/title_not_use"
+        tools:layout="@layout/fragment_not_use" />
 </navigation>
